# gnakrydev-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  gnakrydev.yml  health-config.yml  pyproject.toml
.github/workflows/: main.yml
release/: gnakrydev-0.1.3-py3-none-any.whl
src/gnakrydev/: main.py
src/gnakrydev/cli_package/: library.py
src/gnakrydev/cli_package/templates_dockerfiles/: node
tests/: test_gnakrydev.py
