[tool.poetry]
name = "gnakrydev"
version = "0.1.0"
description = ""
authors = ["Boubacar Sidy Diallo <bsdiallo07@gmail.com>"]

[tool.poetry.scripts]
gnakrydev = "gnakrydev.main:cli"

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"
pycurl = "^7.44.1"
requests = "^2.26.0"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
